QuadriFlow remesh with "Use Paint Symmetry" and "Smooth Normals" may give wrong normals #70280

Closed
opened 2019-09-26 17:54:57 +02:00 by Jun Mizutani · 3 comments
Contributor

System Information
Operating system: Windows-10-10.0.18362 64 Bits
Graphics card: GeForce GTX 1070/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 431.60

Blender Version
Broken: version: 2.81 (sub 12), branch: master, commit date: 2019-09-26 14:43, hash: e5c9bf3aa2
Worked: (optional)

Short description of error
[Please fill out a short description of the error here]
QuadriFlow remesh with "Use Paint Symmetry" and "Smooth Normals" may give wrong normals.
quadri_symm_bug.png
The vertexes at right-hand side of sphere seem to have wrong normals.

Exact steps for others to reproduce the error

[Please describe the exact steps needed to reproduce the issue]
File/New/Sculpting
Remesh/Quad
Check "Use Paint Symmetry" and "Smooth Normals"
Click OK

[Based on the default startup or an attached .blend file (as simple as possible)]

quadri_symm_bug.blend

**System Information** Operating system: Windows-10-10.0.18362 64 Bits Graphics card: GeForce GTX 1070/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 431.60 **Blender Version** Broken: version: 2.81 (sub 12), branch: master, commit date: 2019-09-26 14:43, hash: `e5c9bf3aa2` Worked: (optional) **Short description of error** [Please fill out a short description of the error here] QuadriFlow remesh with "Use Paint Symmetry" and "Smooth Normals" may give wrong normals. ![quadri_symm_bug.png](https://archive.blender.org/developer/F7775945/quadri_symm_bug.png) The vertexes at right-hand side of sphere seem to have wrong normals. **Exact steps for others to reproduce the error** [Please describe the exact steps needed to reproduce the issue] File/New/Sculpting Remesh/Quad Check "Use Paint Symmetry" and "Smooth Normals" Click OK [Based on the default startup or an attached .blend file (as simple as possible)] [quadri_symm_bug.blend](https://archive.blender.org/developer/F7775938/quadri_symm_bug.blend)
Author
Contributor

Added subscriber: @jmztn

Added subscriber: @jmztn
Pablo Dobarro self-assigned this 2019-09-26 17:56:21 +02:00

This issue was referenced by 97f4d4c66e

This issue was referenced by 97f4d4c66ebb51608be11c6615a85164a4c2b408
Member

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#70280
No description provided.